--- a/www/html/index.html
+++ b/www/html/index.html
@@ -7,6 +7,7 @@
     <title>Respawn Hub</title>
     <link rel="stylesheet" href="./styles/global.css">
     <script src="./src/component/game.js" defer></script>
+    <script src="./src/component/topic.js" defer></script>
 </head>
 
 <body>
